Fix #201 - notifications z-index increase

--- a/packages/styles/_sass/pm-styles/_pm-notifications.scss
+++ b/packages/styles/_sass/pm-styles/_pm-notifications.scss
@@ -5,7 +5,7 @@
   position: fixed;
   top: 1em;
   left: 50%;
-  z-index: 666;
+  z-index: 777;
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
 }
